--- a/miniprogram/pages/userinf/userinf.wxml
+++ b/miniprogram/pages/userinf/userinf.wxml
@@ -1,49 +1,63 @@
 <!--个人中心-->
-<!--<i-cell-group>
-    <i-cell title="注册" is-link url="/pages/login/login"></i-cell>
-    <i-cell title="我的资料" is-link></i-cell>
-    <i-cell title="我的认证" is-link></i-cell>
-    <i-cell title="我的收藏" is-link></i-cell>
-    <i-cell title="组队历史" is-link></i-cell>
-    <i-cell title="更多" is-link></i-cell>
-    <view style="padding: 15px;">PANEL 内容区域</view>
+<scroll-view scroll-y class="scrollPage">
+  <view class="UCenter-bg">
+    <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
+    <block wx:else>
+      <image src="{{userInfo.avatarUrl}}" class="userinfo-avatar" mode="cover"></image>
+      <view class="text-xl">{{userInfo.nickName}}
+        <!--<text class="text-df">v2.0</text>-->
+      </view>
 
-</i-cell-group>-->
-<view class="weui-cells weui-cells_after-title">
-  <navigator url="/pages/login/login" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">注册</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">我的资料</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">我的认证</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
-</view>
-<view class="weui-cells__title">
-  <text>\n</text>
-</view>
-<view class="weui-cells weui-cells_after-title">
+      <view class="margin-top-sm">
+        <!--<text>哈哈</text>-->
+      </view>
+    </block>
+    <image src="https://image.weilanwl.com/gif/wave.gif" mode="scaleToFill" class="gif-wave"></image>
+  </view>
+  <view class="padding flex text-center text-grey bg-white shadow-warp">
+    <view class="flex flex-sub flex-direction solid-right">
+      <view class="text-xxl text-orange">{{visitTotal}}</view>
+      <view class="margin-top-sm">
+        <text class="cuIcon-attentionfill"></text> 收藏</view>
+    </view>
+    <view class="flex flex-sub flex-direction solid-right">
+      <view class="text-xxl text-blue">{{starCount}}</view>
+      <view class="margin-top-sm">
+        <text class="cuIcon-favorfill"></text> 没想好</view>
+    </view>
 
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">我的收藏</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">组队历史</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
-  <navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-    <view class="weui-cell__bd">更多</view>
-    <view class="weui-cell__ft weui-cell__ft_in-access"></view>
-  </navigator>
-</view>
-<text>\n\n\n\n\n\n</text>
-<button type="warn">退出登录</button>
+  </view>
+  <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg radius">
+    <view class="cu-item arrow">
+      <navigator class="content" url="../userfile/userfile" hover-class="none">
+        <text class="cuIcon-creativefill text-orange"></text>
+        <text class="text-grey">我的资料</text>
+      </navigator>
+    </view>
+    <view class="cu-item arrow">
+      <navigator class="content" url="../rec/rec" hover-class="none">
+        <text class="cuIcon-creativefill text-orange"></text>
+        <text class="text-grey">我的认证</text>
+      </navigator>
+    </view>
+    <view class="cu-item arrow">
+      <navigator class="content" url="/pages/about/test/list" hover-class="none">
+        <text class="cuIcon-creativefill text-orange"></text>
+        <text class="text-grey">组队历史</text>
+      </navigator>
+    </view>
+    <view class="cu-item arrow">
+      <navigator class="content" url="/pages/about/test/list" hover-class="none">
+        <text class="cuIcon-creativefill text-orange"></text>
+        <text class="text-grey">联系我们</text>
+      </navigator>
+    </view>
+  </view>
+  <view class="cu-tabbar-height"></view>
 
+<button wx:if="{{stuId!=''}}" bindtap="quit" type="warn">退出登录</button>
+<button wx:else bindtap="login" type="primary">认证</button>
+</scroll-view>
 
 <view class="weui-footer">
   <view class="weui-footer__links">
