--- a/miniprogram/pages/rec/rec.wxml
+++ b/miniprogram/pages/rec/rec.wxml
@@ -1,12 +1,14 @@
-
 <view class="page">
-  <view wx:if="{{rec_change==1}}"class="page__bd">
+  <view wx:if="{{rec_change==1}}" class="page__bd">
     <view class="weui-cells__title">认证信息</view>
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
         <view class="weui-cell__bd">
-          <input bindinput="ID" class="weui-input" value="{{stu_ID}}" placeholder="学号" />
-          <input bindinput="name" class="weui-input" value="{{stu_name}}" placeholder="姓名" />
+          <input bindinput="ID" disabled="true"class="weui-input" value="{{stuinf.id}}" placeholder="学号" />
+          <input bindinput="name" disabled="true" class="weui-input" value="{{stuinf.name}}" placeholder="姓名" />
+          <input bindinput="number" class="weui-input" placeholder="微信号" />
+          <input bindinput="school" class="weui-input" placeholder="学院" />
+          <input bindinput="major" class="weui-input" placeholder="专业" />
         </view>
       </view>
     </view>
@@ -14,6 +16,6 @@
 </view>
 <view class="padding flex flex-direction">
   <button ontap="imageBase64" wx:if="{{rec_change==0}}" class="cu-btn bg-mauve margin-tb-sm lg">上传照片</button>
-   <button ontap="imageBase64" wx:if="{{rec_change==1}}" class="cu-btn bg-mauve margin-tb-sm lg">重新上传</button>
-  <button ontap="save" wx:if="{{rec_change==1}}"class="cu-btn bg-cyan margin-tb-sm lg">保存</button>
+  <button ontap="imageBase64" wx:if="{{rec_change==1}}" class="cu-btn bg-mauve margin-tb-sm lg">重新上传</button>
+  <button ontap="save" wx:if="{{rec_change==1}}" class="cu-btn bg-cyan margin-tb-sm lg">保存</button>
 </view>
