--- a/miniprogram/pages/userinf/userinf.wxml
+++ b/miniprogram/pages/userinf/userinf.wxml
@@ -16,47 +16,50 @@
   </view>
   <view class="padding flex text-center text-grey bg-white shadow-warp">
     <view class="flex flex-sub flex-direction solid-right">
-      <view class="text-xxl text-orange">{{visitTotal}}</view>
+      <view class="text-xxl text-orange">{{stuinf.starnum}}</view>
       <view class="margin-top-sm">
-        <text class="cuIcon-attentionfill"></text> 收藏</view>
+        <text class="cuIcon-like"></text> 收藏</view>
     </view>
-    <view class="flex flex-sub flex-direction solid-right">
-      <view class="text-xxl text-blue">{{starCount}}</view>
+    <view bindtap='rec' class="flex flex-sub flex-direction solid-right">
+      <view wx:if="{{stuId!=''}}" class="text-xxl text-blue">已认证</view>
+      <view wx:else class="text-xxl text-blue">未认证</view>
       <view class="margin-top-sm">
-        <text class="cuIcon-favorfill"></text> 没想好</view>
+        <text class="cuIcon-favor"></text>校友认证</view>
     </view>
 
   </view>
   <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg radius">
-    <view class="cu-item arrow">
-      <navigator class="content" url="../userfile/userfile" hover-class="none">
-        <text class="cuIcon-creativefill text-orange"></text>
+    <view bindtap="userfile" class="cu-item arrow">
+      <view class="content" hover-class="none">
+        <text class="cuIcon-profile text-green"></text>
         <text class="text-grey">我的资料</text>
-      </navigator>
+      </view>
     </view>
-    <view class="cu-item arrow">
-      <navigator class="content" url="../rec/rec" hover-class="none">
-        <text class="cuIcon-creativefill text-orange"></text>
-        <text class="text-grey">我的认证</text>
-      </navigator>
-    </view>
+
     <view class="cu-item arrow">
       <navigator class="content" url="/pages/about/test/list" hover-class="none">
-        <text class="cuIcon-creativefill text-orange"></text>
+        <text class="cuIcon-time text-orange"></text>
         <text class="text-grey">组队历史</text>
       </navigator>
     </view>
+  </view>
+    <view class="cu-list menu card-menu sm-border margin-top-xl margin-bottom-xl shadow-lg">
     <view class="cu-item arrow">
-      <navigator class="content" url="/pages/about/test/list" hover-class="none">
-        <text class="cuIcon-creativefill text-orange"></text>
-        <text class="text-grey">联系我们</text>
+      <navigator class='content' url='../about/about' hover-class='none'>
+        <text class='cuIcon-new  text-mauve'></text>
+        <text class='text-grey'>关于我们</text>
       </navigator>
     </view>
+    <view class="cu-item arrow">
+      <button class='cu-btn content' open-type='feedback'>
+        <text class="cuIcon-notice  text-red"></text>
+        <text class='text-grey'>反馈</text>
+      </button>
+    </view>
   </view>
-  <view class="cu-tabbar-height"></view>
-
-<button wx:if="{{stuId!=''}}" bindtap="quit" type="warn">退出登录</button>
-<button wx:else bindtap="login" type="primary">认证</button>
+  <!--<view class="cu-tabbar-height"></view>-->
+  <button wx:if="{{stuId!=''}}" bindtap="quit" class="bg-red round">退出登录</button>
+  <button wx:else bindtap="login" type="primary">认证</button>
 </scroll-view>
 
 <view class="weui-footer">
