--- a/miniprogram/pages/taskinf/taskinf.wxml
+++ b/miniprogram/pages/taskinf/taskinf.wxml
@@ -32,6 +32,9 @@
   </view>
 
   <view class="padding flex flex-direction">
+  <form report-submit="true" bindsubmit="complete">
+  <button button formType="submit" ontap="complete" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-green margin-tb-sm lg">完成任务</button>
+  </form>
     <button ontap="update" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-green margin-tb-sm lg">更改队伍信息</button>
     <button ontap="seeCandi" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-yellow margin-tb-sm lg">查看候选人</button>
     <button ontap="dismiss" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-red margin-tb-sm lg">解散队伍</button>
