--- a/miniprogram/pages/star/star.wxml
+++ b/miniprogram/pages/star/star.wxml
@@ -3,8 +3,9 @@
 <!--<view>
 <text>\n</text>
 </view>-->
-<i-card bindtap="detailedInf" wx:if="{{stuId!=''}}"wx:for="{{taskOngoing}}" wx:for-index="index" data-index="{{index}}"wx:key="number" title="{{category[item.category]}}" extra="{{item.dateInf}}"thumb="https://i.loli.net/2017/08/21/599a521472424.jpg">
+<i-card bindtap="cancle" wx:if="{{stuId!=''}}"wx:for="{{taskOngoing}}" wx:for-index="index" data-index="{{index}}"wx:key="number" title="{{category[item.category]}}" extra="{{item.dateInf}}"thumb="https://i.loli.net/2017/08/21/599a521472424.jpg">
   <view slot="content">{{item.briefInf}}</view>
   <view slot="footer">{{item.teammate}}人</view>
+  
 </i-card>
 
