--- a/miniprogram/pages/Test/Test.wxml
+++ b/miniprogram/pages/Test/Test.wxml
@@ -1,88 +1,41 @@
-<!--pages/release/release.wxml-->
-<view class='release_view'>
-
-  <!--封面图片  -->
-  <view class='the_cover_view' >
-    <image src="../../images/icon/index.png" style='width:{{the_cover_wigth}}%;' mode="aspectFit" class='the_cover_view_images'></image>  
-  </view>
-  <!--封面图片  -->
-
-
-  <!--活动内容  -->
-  <view class='the_content_view'>
-    <view class='the_content_title_view'>
-      <image src='../../images/icon/faqititle.png'></image>
-      <input placeholder='活动标题' bindinput="briefInf"></input>
-    </view>
-    <view class='the_content_content'>
-      <textarea maxlength='500' placeholder='填写活动的内容，让更多的小伙伴参加活动吧！(标题内容不能包含多个空格，不能包含特殊字符)' bindinput='detailsInf' ></textarea>
-    </view>
-  </view>
-  <!--活动内容  -->
-
-
-  <!--开始时间结束时间  -->
-  <view class='release_start_data_view'>
-    <image src='../../images/icon/datestart.png' class='release_start_data_view_image'></image>
-    <text class='release_start_data_view_text'>活动开始时间</text>
-    <view class='release_start_data_view_right'>
-      <picker class='release_start_data_view_data' picker mode="date" value="{{date}}" start="2019-05-01" end="2020-09-01" bindchange="bindDateChange">
-        <text class='release_start_data_view_data'>{{date}}</text>
-        <image src='../../images/icon/nextbm.png' class='release_start_data_view_image1'></image>
-      </picker>
-    </view>
-  </view>
-  
-  <!--开始时间结束时间  -->
-
-
-  <!--活动类别  -->
-  <view class='address_view'>
-    <image src='../../images/icon/allactivict.png'></image>
-    <text>活动类别</text>
-    <view class='address'>
-      <picker class='gerenxinxi_view_touxiang_images_sr' bindchange="bindCountryChange" value="{{countryIndex}}" range="{{countries}}">
-        <text>{{countryIndex}}</text>
-        <image src='../../images/icon/nextbm.png'></image>
-      </picker>
-    </view>
-  </view>
-  <!--活动类别  -->
-
-  <!--限制人数  -->
-  <view class='user_name_view'>
-    <image src='../../images/icon/xianzhirenshu.png'></image>
-    <text>组队人数</text>
-    <view>
-      <input placeholder='限制人数' maxlength='4' type='number' bindinput='handleChange' value='{{value}}'></input>
-      <image src='../../images/icon/nextbm.png'></image>
-    </view>
-  </view>
-  <!--限制人数  -->
-  <view class='the_content_title_view'>
-      <image src='../../images/icon/kaorder0.png'></image>
-      <view>高级设置</view>
-    </view>
-
+<view class="page">
+  <view class="page__bd">
     <view class="weui-cells weui-cells_after-title">
-      <checkbox-group bindchange="checkboxChange">
-        <label class="weui-cell weui-check__label" wx:for="{{checkboxItems}}" wx:key="value">
-          <checkbox class="weui-check" value="{{item.value}}" checked="{{item.checked}}" />
+      <view class="weui-cell">
+        <view class="weui-cell__bd">队伍简述</view>
+        <view class="weui-cell__ft">{{taskOngoing.briefInf}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">详细信息</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__mid">{{taskOngoing.detailsInf}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">发起者学号</view>
+        <view class="weui-cell__ft">{{taskOngoing.Giverid}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">候选人学号</view>
+        <view class="weui-cell__ft">{{taskOngoing.Reciverid}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">队伍ID</view>
+        <view class="weui-cell__ft">{{taskOngoing.taskid}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">活动开始时间</view>
+        <view class="weui-cell__ft">{{taskOngoing.dateInf}}</view>
+      </view>
 
-          <view class="weui-cell__hd weui-check__hd_in-checkbox">
-            <icon class="weui-icon-checkbox_circle" type="circle" size="23" wx:if="{{!item.checked}}"></icon>
-            <icon class="weui-icon-checkbox_success" type="success" size="23" wx:if="{{item.checked}}"></icon>
-          </view>
-          <view class="weui-cell__bd">{{item.name}}</view>
-        </label>
-      </checkbox-group>
     </view>
+  </view>
+
+  <view class="padding flex flex-direction">
     
-
-  <!--发布活动  -->
-
-      <form report-submit="true" bindsubmit="button_three">
-      <button formType="submit" ontap="raise" class='get_initiate'>发起</button>
-      </form>
-   
+<form report-submit="true" bindsubmit="button_three">
+    <button formType="submit" ontap="joinTeam" class="cu-btn bg-red margin-tb-sm lg" disabled="{{disabled}}">加入队伍</button>
+</form>
+<button ontap="star" class="cu-btn bg-orange margin-tb-sm lg" disabled="{{star_disabled}}">收藏队伍</button>
+  </view>
 </view>
