--- a/miniprogram/pages/details/details.wxml
+++ b/miniprogram/pages/details/details.wxml
@@ -1,41 +1,58 @@
-<view class="page">
-  <view class="page__bd">
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell">
-        <view class="weui-cell__bd">队伍简述</view>
-        <view class="weui-cell__ft">{{taskOngoing.briefInf}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">详细信息</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__mid">{{taskOngoing.detailsInf}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">发起者学号</view>
-        <view class="weui-cell__ft">{{taskOngoing.Giverid}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">候选人学号</view>
-        <view class="weui-cell__ft">{{taskOngoing.Reciverid}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">队伍ID</view>
-        <view class="weui-cell__ft">{{taskOngoing.taskid}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">活动开始时间</view>
-        <view class="weui-cell__ft">{{taskOngoing.dateInf}}</view>
-      </view>
 
+  <!--封面图片  -->
+  <view class='the_cover_view' >
+    <image src="../../images/icon/ditumoshi.png" style='width:{{the_cover_wigth}}%;' mode="aspectFit" class='the_cover_view_images'></image>  
+  </view>
+  <!--封面图片  -->
+
+<view class="cu-timeline">
+  <view class="cu-time" >任务详情</view>
+  <view class="cu-item cur cuIcon-noticefill">
+    <view class="content bg-red shadow-blur">
+      <text>队伍简述：</text> {{taskOngoing.briefInf}}
+    </view>
+    <view class="content bg-orange shadow-blur">
+      <text>候选人名单：</text>{{taskOngoing.Reciverid}}
+    </view>
+    <view class="bg-olive content shadow-blur">
+      <text>开始时间：</text> {{taskOngoing.dateInf}}
+    </view>
+    <view class="bg-cyan content shadow-blur">
+      <text>队伍详情：</text>{{taskOngoing.detailsInf}}
+    </view>
+  </view>
+</view>
+
+<view class="cu-timeline">
+  <view class="cu-time">发布人</view>
+  <view class="cu-item">
+    <view class="content">
+      <view class="cu-capsule radius">
+        <view class="cu-tag bg-cyan">姓名</view>
+        <view class="cu-tag line-cyan">{{stuinf.name}}</view>
+      </view>
+      <view class="margin-top">{{stuinf.name}}</view>
+    </view>
+    <view class="content">
+      <view class="cu-capsule radius">
+        <view class="cu-tag bg-cyan">发起人</view>
+        <view class="cu-tag line-cyan">学院</view>
+      </view>
+      <view class="margin-top">{{stuinf.school}} {{stuinf.major}}</view>
+    </view>
+     <view class="content">
+      <view class="cu-capsule radius">
+        <view class="cu-tag bg-cyan">发起人</view>
+        <view class="cu-tag line-cyan">标签</view>
+      </view>
+      <view class="margin-top">{{stuinf.tag}}</view>
     </view>
   </view>
 
-  <view class="padding flex flex-direction">
-    
-<form report-submit="true" bindsubmit="button_three">
-    <button formType="submit" ontap="joinTeam" class="cu-btn bg-red margin-tb-sm lg" disabled="{{disabled}}">加入队伍</button>
-</form>
-<button ontap="star" class="cu-btn bg-orange margin-tb-sm lg" disabled="{{star_disabled}}">收藏队伍</button>
-  </view>
+
 </view>
+
+<form report-submit="true" bindsubmit="button_three">
+    <button class="raise" position="fixed" formType="submit" ontap="joinTeam" disabled="{{disabled}}">加入队伍</button>
+</form>
+
