--- a/miniprogram/app.wxss
+++ b/miniprogram/app.wxss
@@ -2,8 +2,6 @@
 @import "colorui/main.wxss";
 @import "colorui/icon.wxss";
 
-
-
 .container {
   height: 100%;
   display: flex;
@@ -206,12 +204,12 @@
   text-align: center;
 }
 
-
 /*.page input {
   padding: 20rpx 30rpx;
   background-color: #fff;
   border-bottom: 1px solid #ddd;
 }*/
+
 checkbox, radio {
   margin-right: 10rpx;
 }
@@ -1468,8 +1466,8 @@ icon {
   white-space: nowrap;
 }
 
-
 /**app.wxss**/
+
 .container {
   height: 100%;
   display: flex;
@@ -1478,30 +1476,34 @@ icon {
   justify-content: space-between;
   /*padding: 200rpx 0;*/
   box-sizing: border-box;
-  background: #F0F4F3;
+  background: #f0f4f3;
 }
 
-.container.withtab{
+.container.withtab {
   margin: 105rpx 0 0 0;
   /*top: 105rpx;*/
 }
-.flex-wrp{
+
+.flex-wrp {
   display: flex;
 }
-.flex-tab{
+
+.flex-tab {
   flex-flow: row nowrap;
   justify-content: space-around;
   align-items: stretch;
 }
-.flex-item{
+
+.flex-item {
   flex-grow: 1;
   text-align: center;
 }
-.top-tab{
+
+.top-tab {
   width: 750rpx;
   height: 100rpx;
-  background: #298DE5;
-  color: #8CCEFD;
+  background: #298de5;
+  color: #8ccefd;
   font-size: 28rpx;
   line-height: 100rpx;
   box-shadow: 0 2px 2px #bebebe;
@@ -1510,38 +1512,45 @@ icon {
   top: 0;
   z-index: 9999;
 }
-.toptab.active{
-  color: #ffffff;
-  border-bottom: solid 2px #ffffff;
+
+.toptab.active {
+  color: #fff;
+  border-bottom: solid 2px #fff;
 }
-.container{
+
+.container {
   padding: 0;
   font-size: 14rpx;
   color: #000;
 }
-.container .feed-item{
+
+.container .feed-item {
   width: 690rpx;
   padding: 30rpx 30rpx 20rpx;
   margin: 7rpx 0 6rpx 0;
-  background: #ffffff;
+  background: #fff;
   border-top: 1px solid #eee;
   border-bottom: 1px solid #eee;
-  box-shadow: 0 2px 5px #eeeeee;
+  box-shadow: 0 2px 5px #eee;
 }
-.container .feed-item .feed-source{
+
+.container .feed-item .feed-source {
   width: 690rpx;
   left: 0;
   height: 50rpx;
 }
-.container .feed-item .feed-source .avatar{
+
+.container .feed-item .feed-source .avatar {
   position: relative;
   display: inline-block;
 }
-.container .feed-item .feed-source a{
+
+.container .feed-item .feed-source a {
   display: inline-block;
   height: 40rpx;
 }
-.container .feed-item .feed-source .avatar image{
+
+.container .feed-item .feed-source .avatar image {
   /*position: absolute;*/
   display: inline-block;
   width: 45rpx;
@@ -1550,7 +1559,8 @@ icon {
   top: 10rpx;
   vertical-align: middle;
 }
-.container .feed-item .feed-source text{
+
+.container .feed-item .feed-source text {
   /*position: absolute;*/
   display: inline-block;
   height: 40rpx;
@@ -1560,39 +1570,51 @@ icon {
   color: #a0acac;
   font-size: 26rpx;
 }
-.container .feed-item .feed-source .item-more{
+
+.container .feed-item .feed-source .item-more {
   display: inline-block;
   width: 40rpx;
   height: 45rpx;
   float: right;
 }
-.container .feed-item .feed-content{
+
+.container .feed-item .feed-content {
   padding: 10rpx 0 0 0;
 }
-.container .feed-item .feed-content .question text{
+
+.container .feed-item .feed-content .question text {
   font-size: 28rpx;
   font-weight: 600px;
   line-height: 40rpx;
   text-space: 5rpx;
 }
-.container .feed-item .feed-content .answer-body{
+
+.container .feed-item .feed-content .answer-body {
   padding: 10rpx 0 0 0;
   /*height: 10rpx;*/
   font-size: 24rpx;
   line-height: 28rpx;
   color: #5b5b5b;
 }
-.container .feed-item .feed-content .answer-actions{
+
+.container .feed-item .feed-content .answer-actions {
   width: 690rpx;
-  padding: 10rpx 0  0;
+  padding: 10rpx 0 0;
   color: #a0acac;
 }
-.container .feed-item .feed-content .answer-actions view{
+
+.container .feed-item .feed-content .answer-actions view {
   display: inline-block;
   vertical-align: text-bottom;
   padding: 0 10rpx 0 0;
   font-size: 24rpx;
 }
-.container .feed-item .feed-content .answer-actions .dot ::after{
+
+.container .feed-item .feed-content .answer-actions .dot ::after {
   content: "•";
+}
+
+.space {
+  margin-top: 93px;
+  position: absolute;
 }
