--- a/miniprogram/pages/taskinf/taskinf.wxml
+++ b/miniprogram/pages/taskinf/taskinf.wxml
@@ -1,47 +1,39 @@
-
-  <!--封面图片  -->
-  <view class='the_cover_view' >
-    <image src="../../images/icon/ditumoshi.png" style='width:{{the_cover_wigth}}%;' mode="aspectFit" class='the_cover_view_images'></image>  
-  </view>
-  <!--封面图片  -->
-
-<view class="cu-timeline">
-  <view class="cu-time" >任务详情</view>
-  <view class="cu-item cur cuIcon-noticefill">
-    <view class="content bg-red shadow-blur">
-      <text>队伍简述：</text> {{taskOngoing.briefInf}}
-    </view>
-    <view class="content bg-orange shadow-blur">
-      <text>候选人名单：</text>{{taskOngoing.Reciverid}}
-    </view>
-    <view class="bg-olive content shadow-blur">
-      <text>开始时间：</text> {{taskOngoing.dateInf}}
-    </view>
-    <view class="bg-cyan content shadow-blur">
-      <text>队伍详情：</text>{{taskOngoing.detailsInf}}
-    </view>
-  </view>
-</view>
-
-<view class="cu-timeline">
-  <view class="cu-time">发布人</view>
-  <view class="cu-item">
-    <view class="content" wx:for="{{userlist}}" wx:for-index="index" data-index="{{index}}"wx:key="number">
-      <view class="cu-capsule radius">
-        <view class="cu-tag bg-cyan">{{item.name}}</view>
-        <view class="cu-tag line-cyan">{{item.id}}</view>
+<view class="page">
+  <view class="page__bd">
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell">
+        <view class="weui-cell__bd">队伍简述</view>
+        <view class="weui-cell__ft">{{taskOngoing.briefInf}}</view>
       </view>
-      <view class="margin-top">{{stuinf.name}}</view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">详细信息</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__mid">{{taskOngoing.detailsInf}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">发起者学号</view>
+        <view class="weui-cell__ft">{{taskOngoing.Giverid}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">候选人学号</view>
+        <view class="weui-cell__ft">{{taskOngoing.Reciverid}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">队伍ID</view>
+        <view class="weui-cell__ft">{{taskOngoing.taskid}}</view>
+      </view>
+      <view class="weui-cell">
+        <view class="weui-cell__bd">活动开始时间</view>
+        <view class="weui-cell__ft">{{taskOngoing.dateInf}}</view>
+      </view>
+
     </view>
-   
   </view>
 
-
-</view>
-
- <view class="padding flex flex-direction">
+  <view class="padding flex flex-direction">
   <form report-submit="true" bindsubmit="complete">
-  <button button formType="submit" ontap="complete" wx:if="{{taskOngoing.Giverid==stuID}}" >完成任务</button>
+  <button button formType="submit" ontap="complete" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-green margin-tb-sm lg">完成任务</button>
   </form>
     <button ontap="update" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-green margin-tb-sm lg">更改队伍信息</button>
     <button ontap="seeCandi" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-yellow margin-tb-sm lg">查看候选人</button>
@@ -50,3 +42,4 @@
 
     <button ontap="quit" wx:else class="cu-btn bg-red margin-tb-sm lg">退出队伍</button>
   </view>
+</view>
