--- a/miniprogram/pages/taskinf/taskinf.wxml
+++ b/miniprogram/pages/taskinf/taskinf.wxml
@@ -1,45 +1,90 @@
-<view class="page">
-  <view class="page__bd">
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell">
-        <view class="weui-cell__bd">队伍简述</view>
-        <view class="weui-cell__ft">{{taskOngoing.briefInf}}</view>
+<!--index.wxml-->
+<view>
+  <scroll-view scroll-y class="DrawerPage {{modalName=='viewModal'?'show':''}}" style="height: 93.5%">
+
+    <import src="/wxSearch/wxSearch.wxml" />
+
+    <view class="page">
+
+      <view class="cu-timeline">
+        <view class="cu-time">任务详情</view>
+        <view class="cu-item cur cuIcon-noticefill">
+          <view class="content bg-red shadow-blur">
+            <text>队伍简述：</text> {{taskOngoing.briefInf}}
+          </view>
+          <view class="content bg-orange shadow-blur">
+            <text>候选人名单：</text>{{taskOngoing.Reciverid}}
+          </view>
+          <view class="bg-olive content shadow-blur">
+            <text>开始时间：</text> {{taskOngoing.dateInf}}
+          </view>
+          <view class="bg-cyan content shadow-blur">
+            <text>队伍详情：</text>{{taskOngoing.detailsInf}}
+          </view>
+        </view>
       </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">详细信息</view>
+
+      <view bindtap="showModal" data-target="viewModal" wx:for="{{userlist}}" wx:for-index="index" data-index="{{index}}" wx:key="number" class='pal_card'>
+        <view class='giver'>
+          <image src="{{item.avotor}}"></image>
+        </view>
+        <view class='basinf'>
+          <view class='taskbrief'>
+            <text>{{item.name}}</text>
+          </view>
+          <view class='taskmate'>
+            <text>所需人数:{{item.school}}人</text>
+            <text class="cuIcon-profile text-black">参与候选人：{{item.major}}人</text>
+          </view>
+        </view>
+        
       </view>
-      <view class="weui-cell">
-        <view class="weui-cell__mid">{{taskOngoing.detailsInf}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">发起者学号</view>
-        <view class="weui-cell__ft">{{taskOngoing.Giverid}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">候选人学号</view>
-        <view class="weui-cell__ft">{{taskOngoing.Reciverid}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">队伍ID</view>
-        <view class="weui-cell__ft">{{taskOngoing.taskid}}</view>
-      </view>
-      <view class="weui-cell">
-        <view class="weui-cell__bd">活动开始时间</view>
-        <view class="weui-cell__ft">{{taskOngoing.dateInf}}</view>
-      </view>
+
 
     </view>
-  </view>
 
-  <view class="padding flex flex-direction">
-  <form report-submit="true" bindsubmit="complete">
-  <button button formType="submit" ontap="complete" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-green margin-tb-sm lg">完成任务</button>
-  </form>
-    <button ontap="update" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-green margin-tb-sm lg">更改队伍信息</button>
-    <button ontap="seeCandi" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-yellow margin-tb-sm lg">查看候选人</button>
-    <button ontap="dismiss" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-red margin-tb-sm lg">解散队伍</button>
-    
-
-    <button ontap="quit" wx:else class="cu-btn bg-red margin-tb-sm lg">退出队伍</button>
-  </view>
+  </scroll-view>
+  <tabbar tabbar="{{tabbar}}"></tabbar>
 </view>
+
+<view class="DrawerClose {{modalName=='viewModal'?'show':''}}" bindtap="hideModal">
+  <text class="cuIcon-pullright"></text>
+</view>
+
+
+<scroll-view scroll-y class="DrawerWindow {{modalName=='viewModal'?'show':''}}">
+  <view class="cu-list menu card-menu margin-top-xl margin-bottom-xl shadow-lg">
+
+    <view class="cu-timeline">
+      <view class="cu-time">候选人</view>
+      <view class="cu-item cur cuIcon-noticefill">
+        <view class="bg-orange content shadow-blur">
+          <text>姓名：</text>
+          <text>{{userlist[modalIndex].name}}</text>
+        </view>
+        <view class="bg-yellow content shadow-blur">
+          <text>学院：</text>
+          <text>{{userlist[modalIndex].school}}</text>
+        </view>
+        <view class="bg-blue content shadow-blur">
+          <text>专业：</text>
+          <text>{{userlist[modalIndex].major}}</text>
+        </view>
+        <view class="bg-olive content shadow-blur">
+          <text>标签：</text>
+          <view class="padding-sm flex flex-wrap">
+            <view class="padding-xs" data-index='{{index}}' wx:for="{{userlist[modalIndex].tag}}" wx:key>
+              <view class="cu-tag radius line-white">{{item}}</view>
+            </view>
+          </view>
+        </view>
+      </view>
+    </view>
+
+
+    <form report-submit="true" bindsubmit="button_three">
+      <button class="raise" position="fixed" formType="submit" ontap="button_two" disabled="{{disabled}}">组队</button>
+    </form>
+
+  </view>
+</scroll-view>
