--- a/miniprogram/pages/Square/Square.wxss
+++ b/miniprogram/pages/Square/Square.wxss
@@ -8,7 +8,16 @@
 
 }
 
+.the_content_content {
+  margin: 20rpx;
+  padding-bottom: 20rpx;
+  /* border-bottom: 1px solid #ededed; */
+}
 
+.the_content_content textarea {
+  width: 100%;
+  font-size: 28rpx;
+}
 .container{
   height: 1500rpx;
 }
