--- a/miniprogram/pages/raise/raise.wxml
+++ b/miniprogram/pages/raise/raise.wxml
@@ -15,7 +15,15 @@
     </view>
   </view>
   <!--活动内容  -->
-
+  <view class='the_content_view'>
+    <view class='the_content_title_view'>
+      <image src='../../images/icon/faqititle.png'></image>
+      <text>个人简介</text>
+    </view>
+    <view class='the_content_content'>
+      <textarea maxlength='500' placeholder='填写自己的信息，越完善就会越快的组到小伙伴哦' bindinput='giverInf'></textarea>
+    </view>
+  </view>
 
   <!--开始时间结束时间  -->
   <view class='release_start_data_view'>
@@ -55,24 +63,7 @@
     </view>
   </view>
   <!--限制人数  -->
-  <view class='the_content_title_view'>
-    <image src='../../images/icon/kaorder0.png'></image>
-    <view>高级设置</view>
-  </view>
-
-  <view class="weui-cells weui-cells_after-title">
-    <checkbox-group bindchange="checkboxChange">
-      <label class="weui-cell weui-check__label" wx:for="{{checkboxItems}}" wx:key="value">
-        <checkbox class="weui-check" value="{{item.value}}" checked="{{item.checked}}" />
-
-        <view class="weui-cell__hd weui-check__hd_in-checkbox">
-          <icon class="weui-icon-checkbox_circle" type="circle" size="23" wx:if="{{!item.checked}}"></icon>
-          <icon class="weui-icon-checkbox_success" type="success" size="23" wx:if="{{item.checked}}"></icon>
-        </view>
-        <view class="weui-cell__bd">{{item.name}}</view>
-      </label>
-    </checkbox-group>
-  </view>
+  
 
 
 
