--- a/miniprogram/pages/rec/rec.wxml
+++ b/miniprogram/pages/rec/rec.wxml
@@ -1,4 +1,14 @@
 <view class="page">
+<view  class="page__bd">
+    <view class="weui-cells__title">注意事项</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <view class="weui-cell__bd">
+          <text>认证目前仅对同济大学开放 \n可以上传相册照片或直接拍照 \n请确保一卡通上学生信息及注意事项字迹清晰 \n拍摄时请摘除保护套，尽量避免反光 \n如果图片识别有误，请重新上传</text>
+        </view>
+      </view>
+    </view>
+  </view>
   <view wx:if="{{rec_change==1}}" class="page__bd">
     <view class="weui-cells__title">认证信息</view>
     <view class="weui-cells weui-cells_after-title">
