--- a/miniprogram/pages/taskinf/taskinf.wxml
+++ b/miniprogram/pages/taskinf/taskinf.wxml
@@ -39,7 +39,17 @@
         </view>
         
       </view>
-
+  <view class="padding flex flex-direction">
+    <button ontap="complete" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-green margin-tb-sm lg">组队完成</button>
+    <button ontap="update" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-red margin-tb-sm lg">更改队伍信息</button>
+  
+    
+    <button ontap="quit" wx:else class="cu-btn bg-red margin-tb-sm lg">退出队伍</button>
+    <form report-submit="true" bindsubmit="button_three">
+      <button formType="submit" ontap="dismiss" wx:if="{{taskOngoing.Giverid==stuID}}" class="cu-btn bg-grey margin-tb-sm lg">解散队伍</button>
+      
+    </form>
+  </view>
 
     </view>
 
@@ -87,7 +97,7 @@
 
 
     <form report-submit="true" bindsubmit="button_three">
-      <button class="raise" position="fixed" formType="submit" ontap="button_two" disabled="{{disabled}}">组队</button>
+      <button class="raise" position="fixed" formType="submit" ontap="button_choose" disabled="{{disabled}}">组队</button>
     </form>
 
   </view>
