--- a/miniprogram/pages/taskinf_change/taskinf_change.wxml
+++ b/miniprogram/pages/taskinf_change/taskinf_change.wxml
@@ -1,69 +1,78 @@
-<!--发起-->
-<view class="page">
-  <view class="page__bd">
-    <view class="weui-cells__title">队伍基本信息</view>
-    <view class="weui-cells weui-cells_after-title">
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__bd">
-          <input bindinput="briefInf"value="{{taskOngoing.briefInf}}" class="weui-input" placeholder="请简单描述你队伍的性质 " />
-        </view>
-      </view>
-      <view class="weui-cell weui-cell_select">
-        <view class="weui-cell__hd weui-cell__hd_in-select-after">
-          <view class="weui-label">选择分类</view>
-        </view>
-        <view class="weui-cell__bd">
-          <picker bindchange="bindCountryChange" value="{{taskOngoing.category}}" range="{{countries}}">
-            <view class="weui-select weui-select_in-select-after">{{countries[taskOngoing.category]}}</view>
-          </picker>
-        </view>
-      </view>
 
-      <view class="weui-cell">
-        <view class="weui-cell__bd">
-          <textarea bindinput="detailsInf" value="{{taskOngoing.detailsInf}}"class="weui-input" placeholder="请详细描述您组队的结构，以及对队员的要求"   style="height: 15.0em" />
-          <view class="weui-textarea-counter">0/200</view>
-        </view>
-      </view>
+<!--pages/release/release.wxml-->
+<view class='release_view'>
 
-      <view class="weui-cell weui-cell_input">
-        <view class="weui-cell__hd">
-          <view class="weui-label">开始时间</view>
-        </view>
-        <view class="weui-cell__bd">
-          <picker mode="date" value="{{taskOngoing.dateInf}}" start="2019-05-01" end="2020-09-01" bindchange="bindDateChange">
-            <view  class="weui-input">{{taskOngoing.dateInf}}</view>
-          </picker>
-        </view>
-      </view>
+
+
+
+  <!--活动内容  -->
+  <view class='the_content_view'>
+    <view class='the_content_title_view'>
+      <image src='../../images/icon/faqititle.png'></image>
+      <input placeholder='活动标题' bindinput="briefInf"></input>
     </view>
-
-    <i-panel title="需要人数">
-      <view style="padding: 16px">
-        <i-input-number value="{{taskOngoing.teammate}}" size="large" min="1" max="100" bindchange="handleChange" />
-      </view>
-    </i-panel>
-
-
-    <view class="weui-cells__title">高级设置</view>
-    <view class="weui-cells weui-cells_after-title">
-      <checkbox-group bindchange="checkboxChange">
-        <label class="weui-cell weui-check__label" wx:for="{{taskOngoing.checkboxItems}}" wx:key="value">
-          <checkbox class="weui-check" value="{{item.value}}" checked="{{item.checked}}" />
-
-          <view class="weui-cell__hd weui-check__hd_in-checkbox">
-            <icon class="weui-icon-checkbox_circle" type="circle" size="23" wx:if="{{!item.checked}}"></icon>
-            <icon class="weui-icon-checkbox_success" type="success" size="23" wx:if="{{item.checked}}"></icon>
-          </view>
-          <view class="weui-cell__bd">{{item.name}}</view>
-        </label>
-      </checkbox-group>
+    <view class='the_content_content'>
+      <textarea maxlength='500' placeholder='填写活动的内容，让更多的小伙伴参加活动吧！(标题内容不能包含多个空格，不能包含特殊字符)' bindinput='detailsInf'></textarea>
     </view>
-   <view class="padding flex flex-direction">
-    <button ontap="save"  class="cu-btn bg-green margin-tb-sm lg">保存</button>
+  </view>
+  <!--活动内容  -->
+  <view class='the_content_view'>
+    <view class='the_content_title_view'>
+      <image src='../../images/icon/faqititle.png'></image>
+      <text>个人简介</text>
+    </view>
+    <view class='the_content_content'>
+      <textarea maxlength='500' placeholder='填写自己的信息，越完善就会越快的组到小伙伴哦' bindinput='giverInf'></textarea>
+    </view>
   </view>
 
-
+  <!--开始时间结束时间  -->
+  <view class='release_start_data_view'>
+    <image src='../../images/icon/datestart.png' class='release_start_data_view_image'></image>
+    <text class='release_start_data_view_text'>活动开始时间</text>
+    <view class='release_start_data_view_right'>
+      <picker class='release_start_data_view_data' picker mode="date" value="{{date}}" start="2019-05-01" end="2020-09-01" bindchange="bindDateChange">
+        <text class='release_start_data_view_data'>{{date}}</text>
+        <image src='../../images/icon/nextbm.png' class='release_start_data_view_image1'></image>
+      </picker>
+    </view>
   </view>
-</view>
+
+  <!--开始时间结束时间  -->
+
+
+  <!--活动类别  -->
+  <view class='address_view'>
+    <image src='../../images/icon/allactivict.png'></image>
+    <text>活动类别</text>
+    <view class='address'>
+      <picker class='gerenxinxi_view_touxiang_images_sr' bindchange="bindCountryChange" value="{{countryIndex}}" range="{{countries}}">
+        <text>{{countryIndex}}</text>
+        <image src='../../images/icon/nextbm.png'></image>
+      </picker>
+    </view>
+  </view>
+  <!--活动类别  -->
+
+  <!--限制人数  -->
+  <view class='user_name_view'>
+    <image src='../../images/icon/xianzhirenshu.png'></image>
+    <text>组队人数</text>
+    <view>
+      <input placeholder='限制人数' maxlength='4' type='number' bindinput='handleChange' value='{{value}}'></input>
+      <image src='../../images/icon/nextbm.png'></image>
+    </view>
+  </view>
+  <!--限制人数  -->
   
+
+
+
+
+  <!--发布活动  -->
+
+  <form report-submit="true" bindsubmit="button_three">
+    <button formType="submit" ontap="save" class='get_initiate'>保存</button>
+  </form>
+
+</view>
