--- a/miniprogram/pages/Searching/Searching.wxml
+++ b/miniprogram/pages/Searching/Searching.wxml
@@ -7,7 +7,7 @@
     <view class="page">
       <view class="wxSearch-section">
         <view class="wxSearch-pancel">
-          <input bindinput="wxSearchInput" bindfocus="wxSerchFocus" value="{{wxSearchData.value}}" bindblur="wxSearchBlur" class="wxSearch-input" placeholder="组个队吧" />
+          <input bindinput="wxSearchInput" bindfocus="wxSerchFocus" value="{{wxSearchData.value}}" bindblur="wxSearchBlur" class="wxSearch-input" placeholder="输入关键词" />
           <button class="wxSearch-button" bindtap="wxSearchFn" size="mini" plain="true">找队</button>
 
         </view>
